--- a/musicplayer.ui
+++ b/musicplayer.ui
@@ -21,7 +21,7 @@
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0" colspan="3">
-       <widget class="QLabel" name="label">
+       <widget class="QLabel" name="lblNowPlayingTitle">
         <property name="text">
          <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
@@ -32,20 +32,20 @@ p, li { white-space: pre-wrap; }
        </widget>
       </item>
       <item row="1" column="0" colspan="3">
-       <widget class="QLabel" name="label_2">
+       <widget class="QLabel" name="lblNowPlayingArtist">
         <property name="text">
          <string>Artist</string>
         </property>
        </widget>
       </item>
       <item row="2" column="0" colspan="3">
-       <widget class="QLabel" name="label_3">
+       <widget class="QLabel" name="lblNowPlayingAlbum">
         <property name="text">
          <string>Album</string>
         </property>
        </widget>
       </item>
-      <item row="3" column="1" colspan="2">
+      <item row="3" column="0" colspan="3">
        <widget class="QLCDNumber" name="lcdTime"/>
       </item>
       <item row="4" column="0">
